--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>CSCE 190: Leo Blue</title>
+    <title>CSCE 190: Leo Blue</title>
+    <link rel=""stylesheet" href="style.css">
 </head>
 <body>
-<h1>Leo Blue</h1>
+    <h1>Leo Blue</h1>
+    <div class="about">
+        <p>[mission statement]</p>
+    </div>
+    <div class="skills">
+        <h2>Skills</h2>
+    </div>
+    <div class="projects"><h2>Highlighted projects</h2>
+    </div>
+    <div class="contact">
+        <h2>Contact me</h2>
+    </div>
 </body>
 </html>
 
