mission statement added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Leo Blue</h1>
     <div class="about">
-        <p>[mission statement]</p>
+        <p>While upholding and fighting for equality for all, I will strive to create a just world where every human being is respected and ensure that everyone has the same opportunities to succeed.</p>
     </div>
     <div class="skills">
         <h2>Skills</h2>
