--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>CSCE 190: Leo Blue</title>
-    <link rel=""stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Leo Blue</h1>
@@ -13,6 +13,25 @@
         <h2>Skills</h2>
     </div>
     <div class="projects"><h2>Highlighted projects</h2>
+
+        <div class = "projects">
+<!-- Problem Statement Assignment -->
+<section class="project">
+<a href="files/statement.pdf"><h3>Problem Statement</h3></a>
+<a href="files/statement.pdf"><img src="images/problem.png"></a>
+<p>One sentence to describe your problem</p>
+</section>
+</div>
+
+        <!--Affinity Diagram Assignment -->
+        <section class="project">
+        <a href="files/Affinity_DOC.pdf"><h3>Affinity Diagram</h3></a>
+        <a href="files/Affinity_DOC.pdf"><img src="images/Affinity_IMG.png"></a>
+        <p>
+        Text describing the diagram
+        </p>
+        </section>
+
     </div>
     <div class="contact">
         <h2>Contact me</h2>
