--- a/index.html
+++ b/index.html
@@ -12,17 +12,14 @@
     <div class="skills">
         <h2>Skills</h2>
     </div>
-    <div class="projects"><h2>Highlighted projects</h2>
-
-        <div class = "projects">
-<!-- Problem Statement Assignment -->
-<section class="project">
-<a href="files/statement.pdf"><h3>Problem Statement</h3></a>
-<a href="files/statement.pdf"><img src="images/problem.png"></a>
-<p>One sentence to describe your problem</p>
+    <div class="projects">
+        <h2>Highlighted projects</h2>
+    <section class="project">
+    <a href="cscefiles/pstatementtext.pdf"><h3>Problem Statement</h3></a>
+    <a href="cscefiles/pstatementtext.pdf"><img src="csceimages/pstatementimage.png"></a>
+    <p>Advertisements on social media often contain inappropriate content for and/or are irrelevant to their targets.</p>
 </section>
 </div>
-
         <!--Affinity Diagram Assignment -->
         <section class="project">
         <a href="files/Affinity_DOC.pdf"><h3>Affinity Diagram</h3></a>
