--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 </div>
         <!--Affinity Diagram Assignment -->
         <section class="project">
-        <a href="files/Affinity_DOC.pdf"><h3>Affinity Diagram</h3></a>
-        <a href="files/Affinity_DOC.pdf"><img src="images/Affinity_IMG.png"></a>
+        <a href="cscefiles/AffDiagram.pdf"><h3>Affinity Diagram</h3></a>
+        <a href="cscefiles/AffDiagram.pdf"><img src="csceimages/AffDiagram.png"></a>
         <p>
-        Text describing the diagram
+        My affinity diagram is here, challenging digital advertisements.
         </p>
         </section>
 
