--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
         </section>
 
     </div>
+<section class="project">
+<a href="files/Sketches_DOC.pdf"><h3>Sketches</h3></a>
+<a href="files/Sketches_DOC.pdf"><img src="images/Sketches_IMG.png"></a>
+<p>
+These sketches that you see here are to 
+</p>
+</section>
+
     <div class="contact">
         <h2>Contact me</h2>
     </div>
