--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
 
     </div>
 <section class="project">
+<a href="cscefiles/Sketches.pdf"><h3>Sketches</h3></a>
+<a href="cscefiles/Sketches.pdf"><img src="csceimages/MainSolution.jpeg"></a>
+<p> These sketches that you see here are to improve the state of YouTube advertisements.</p>
+</section>
+
+<section class="project">
 <a href="files/Sketches_DOC.pdf"><h3>Sketches</h3></a>
 <a href="files/Sketches_DOC.pdf"><img src="images/Sketches_IMG.png"></a>
 <p>
